# Zoho-internship

./: README.md
Task_1/: README.md
Week_1/: day_2.md  day_3.md
task_1/: zacebook.json  zacebook.py
week_1/: day_3.md
week_2/: day_1.md  day_2.md  day_3.md  day_4.md
week_2/code/: .pylintrc  formatting_example.py  mypy.ini
week_2/code/packaging_and_tests/additiveiter/: LICENSE.txt  README.md  setup.cfg
week_2/code/packaging_and_tests/additiveiter/src/additiveiter/: add_iter.py
week_2/code/packaging_and_tests/additiveiter/src/additiveiter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
week_2/code/packaging_and_tests/additiveiter/test/: conftest.py  pytest_report.html  test_list.py  test_mock_exp.py  test_set.py  test_tmp_file.py  test_tuple.py
week_2/code/pytest_examples/: test.py
week_2/code/pytest_examples/addition/: __init__.py
week_3/: day_1.ipynb  day_2.ipynb  day_3.ipynb  day_4.ipynb  day_5.ipynb
week_4/: day_1.ipynb  day_2.ipynb  day_3.ipynb
