[metadata]
name = additiveiter
version = 1.0.1
author = yashwanthika
author_email = yashwanthika2000@gmail.com
description = A simple Python package for addition
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/yashwanthika/Zoho-internship/tree/main/week_2/code/pytest_examples
project_urls =
    Bug Tracker = https://github.com/yashwanthika/Zoho-internship/issues
    repository = https://github.com/yashwanthika/Zoho-internship
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src